--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "type": "claroline-plugin",
     "require": {
         "ext-intl": "*",
-        "claroline/core-bundle": ">=2.15.0,<4.0"
+        "claroline/core-bundle": "~3.0"
     },
     "autoload": {
         "psr-0": { "Icap\\DropzoneBundle": "" }
