--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "require": {
         "php": ">=5.4.1",
         "ext-intl": "*",
-        "claroline/core-bundle": "~4.0"
+        "claroline/core-bundle": "~4.0",
+        "icap/notification-bundle": "~2.0"
     },
     "autoload": {
         "psr-0": { "Icap\\DropzoneBundle": "" }
