--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
         "php": ">=5.4.1",
         "ext-intl": "*",
         "claroline/core-bundle": "~4.0",
-        "icap/notification-bundle": "~2.0"
+        "icap/notification-bundle": "~2.0",
+        "icap/badge-bundle": "~4.0"
     },
     "autoload": {
         "psr-0": { "Icap\\DropzoneBundle": "" }
