--- a/Resources/config/config.yml
+++ b/Resources/config/config.yml
@@ -6,7 +6,7 @@ plugin:
         - name: icap_dropzone
           class: Icap\DropzoneBundle\Entity\Dropzone
           is_visible: true
-          is_browsable: false
+          is_notifiable: true
           icon: icap_eval_icon.png
           actions:
             - name: open
