--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,21 @@
 {
     "name": "icap/dropzone-bundle",
+    "description": "Claroline wiki plugin from ICAP",
+    "keywords": ["Claroline", "Plugin", "Wiki", "ICAP"],
+    "homepage": "http://www.claroline.net",
     "type": "claroline-plugin",
+    "license": "",
+    "authors": [
+        {
+            "name": "ICAP development team",
+            "homepage": "https://github.com/iCAPLyon1"
+        }
+    ],
     "require": {
         "php": ">=5.4.1",
         "ext-intl": "*",
         "claroline/core-bundle": "~4.0",
-        "icap/notification-bundle": "~2.0",
-        "icap/badge-bundle": "~4.0"
+        "icap/notification-bundle": "~2.0"
     },
     "autoload": {
         "psr-0": { "Icap\\DropzoneBundle": "" }
