--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "php": ">=5.4.1",
         "ext-intl": "*",
         "claroline/core-bundle": "~5.0",
-        "icap/notification-bundle": "~2.0"
+        "icap/notification-bundle": "dev-dev-5.0"
     },
     "autoload": {
         "psr-0": { "Icap\\DropzoneBundle": "" }
